[gd_scene load_steps=12 format=3 uid="uid://cxmpl4odq1bma"]

[ext_resource type="Texture2D" uid="uid://byrwy4qqowl2b" path="res://Assets/delivery spritesheet.png" id="1_iqria"]
[ext_resource type="Script" path="res://Script/house.gd" id="1_n02r6"]
[ext_resource type="PackedScene" uid="uid://cactk1g6mdxp8" path="res://Scene/marker.tscn" id="3_2d5oh"]
[ext_resource type="AudioStream" uid="uid://b5djr8b22swr7" path="res://Assets/Audio/PP_04.wav" id="4_qu2yl"]
[ext_resource type="AudioStream" uid="uid://daiiaa1jx31qk" path="res://Assets/Audio/Confirm.wav" id="5_uknk6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n3hfw"]
size = Vector2(48, 30)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_cq4rg"]

[sub_resource type="Curve" id="Curve_66ikc"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.401653, 1), 0.231534, 0.231534, 0, 0, Vector2(0.596694, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_tuagn"]
curve = SubResource("Curve_66ikc")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0ldpx"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(25, 0, 0)
direction = Vector3(0, -1, 0)
spread = 0.0
initial_velocity_min = 25.0
initial_velocity_max = 30.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 0.5
scale_curve = SubResource("CurveTexture_tuagn")

[sub_resource type="AtlasTexture" id="AtlasTexture_t7gnb"]
atlas = ExtResource("1_iqria")
region = Rect2(48, 32, 16, 16)

[node name="House" type="Node2D"]
script = ExtResource("1_n02r6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("1_iqria")
region_enabled = true
region_rect = Rect2(112, 32, 48, 32)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_n3hfw")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_cq4rg")
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_0ldpx")
texture = SubResource("AtlasTexture_t7gnb")
one_shot = true
explosiveness = 1.0

[node name="Marker" parent="." instance=ExtResource("3_2d5oh")]
position = Vector2(-2, -39)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -15)
scale = Vector2(1.3, 1.5)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -15)
stream = ExtResource("4_qu2yl")
bus = &"SFX"

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -15)
stream = ExtResource("5_uknk6")
volume_db = 2.0
bus = &"SFX"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
